# Shapes2D-CPP

./: .gitignore  .travis.yml  A2_Report  CMakeLists.txt  README.md  Shape2D-C++.code-workspace  test  test.cpp
.github/workflows/: myworkflow.yml
FT_Assn2_TestCases/: CSCI251_A2_Checklist.xls  CSCI251_A2_Test_Cases.doc
docs/: A2_Doxyfile.in  CMakeLists.txt
include/: Assn2.h  Circle.h  Cross.h  Point.h  Rectangle.h  Shape2D.h  Square.h
libs/: CMakeLists.txt
libs/Catch2/: CMakeLists.txt
libs/GTest/: CMakeLists.txt
src/: Assn2.cpp  CMakeLists.txt  Circle.cpp  Cross.cpp  Point.cpp  Rectangle.cpp  Shape2D.cpp  Square.cpp  main.cpp
tests/: CMakeLists.txt  test_Circle.cpp  test_Cross.cpp  test_Point.cpp  test_Rectangle.cpp
tests/Catch2/: CMakeLists.txt  test_Square.cpp
